@@ -4,5 +4,4 @@ dist_sl2d_scripts_SCRIPTS = \
 	ffmpeg_pipe_ezstream.sh \
 	ffmpeg_pipe_push.sh \
 	prepare_ezstream_conf.sh \
-	mail.py \
-	push.py
+	mail.py
